app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  labels:
    app: argocdexample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocdexample
  template:
    metadata:
      labels:
        app: argocdexample
    spec:
      containers:
      - name: argocdexample-nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: website-cm-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: website-cm-volume 
        configMap:
          name: website-cm
