app/app-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: website-ingress-route
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argocdexample.lab`)
      priority: 10
      services:
        - name: website-service
          port: 80
